# rust-image-worker

./: .gitignore  Cargo.toml  README.md  wrangler.toml  wrangler.toml.example
.github/workflows/: deploy.yml
src/: lib.rs
src/image/: mod.rs
tests/: web.rs
worker/: worker.js
worker/infra/R2/: bucket.js
worker/utils/: utils.js
worker/wasm/: index.d.ts  index.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
