[package]
name = "rust-image-worker"
version = "0.1.1"
authors = ["Pieter Raubenheimer <pieter@wavana.com>", "Adam Du <github@adamdu.nz>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = "0.2.78"
serde = "1.0.133"
serde_derive = "1.0.133"
serde-wasm-bindgen = "0.4.1"
failure = "0.1.8"
base64 = "0.13.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[dev-dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.image]
version = "0.23.14"
default-features = false
features = ["jpeg", "png", "gif", "webp"]